--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,25 +1,183 @@
----
-title: "Reproducible Research: Peer Assessment 1"
-output: 
-  html_document:
-    keep_md: true
----
+# **Reproducible Research Course Project 1**
+#### *John Joseph R. Naputo*
+#### *May 16, 2019*
 
 
-## Loading and preprocessing the data
+### Introduction
+It is now possible to collect a large amount of data about personal movement using activity monitoring devices such as a Fitbit, Nike Fuelband, or Jawbone Up. These type of devices are part of the "quantified self" movement - a group of enthusiasts who take measurements about themselves regularly to improve their health, to find patterns in their behavior, or because they are tech geeks. But these data remain under-utilized both because the raw data are hard to obtain and there is a lack of statistical methods and software for processing and interpreting the data.
 
+This assignment makes use of data from a personal activity monitoring device. This device collects data at 5 minute intervals through out the day. The data consists of two months of data from an anonymous individual collected during the months of October and November, 2012 and include the number of steps taken in 5 minute intervals each day.
+The data for this assignment can be downloaded from the course web site:
 
+Dataset: [Activity monitoring data](https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2Factivity.zip) [52K]
 
-## What is mean total number of steps taken per day?
+The variables included in this dataset are:
 
+**steps**: Number of steps taking in a 5-minute interval (missing values are coded as *NA*)
 
+**date**: The date on which the measurement was taken in YYYY-MM-DD format
 
-## What is the average daily activity pattern?
+**interval**: Identifier for the 5-minute interval in which measurement was taken
 
+The dataset is stored in a comma-separated-value (CSV) file and there are a total of 17,568 observations in this dataset.
 
+### Review Criteria 
 
-## Imputing missing values
+**Repo**
 
+1. Valid GitHub URL
+2. At least one commit beyond the original fork
+3. Valid SHA-1
+4. SHA-1 corresponds to a specific commit
 
+**Commit containing full submission**
 
-## Are there differences in activity patterns between weekdays and weekends?
+1. Code for reading in the dataset and/or processing the data
+2. Histogram of the total number of steps taken each day
+3. Mean and median number of steps taken each day
+4. Time series plot of the average number of steps taken
+5. The 5-minute interval that, on average, contains the maximum number of steps
+6. Code to describe and show a strategy for imputing missing data
+7. Histogram of the total number of steps taken each day after missing values are imputed
+8. Panel plot comparing the average number of steps taken per 5-minute interval across weekdays and weekends
+9. All of the R code needed to reproduce the results (numbers, plots, etc.) in the report
+
+### Assignment
+This assignment will be described in multiple parts. You will need to write a report that answers the questions detailed below. Ultimately, you will need to complete the entire assignment in a **single R markdown** document that can be processed by **knitr** and be transformed into an HTML file.
+
+Throughout your report make sure you always include the code that you used to generate the output you present. When writing code chunks in the R markdown document, always use *echo = TRUE* so that someone else will be able to read the code. **This assignment will be evaluated via peer assessment so it is essential that your peer evaluators be able to review the code for your analysis.**
+
+For the plotting aspects of this assignment, feel free to use any plotting system in R (i.e., base, lattice, ggplot2)
+
+Fork/clone the [GitHub repository created for this assignment](http://github.com/rdpeng/RepData_PeerAssessment1). You will submit this assignment by pushing your completed files into your forked repository on GitHub. The assignment submission will consist of the URL to your GitHub repository and the SHA-1 commit ID for your repository state.
+
+NOTE: The GitHub repository also contains the dataset for the assignment so you do not have to download the data separately.
+
+### Installing and loading necessary packages
+```{r, warning=FALSE, message=FALSE}
+#install.packages("knitr")
+#install.packages("dplyr")
+#install.packages("ggplot2")
+#install.packages("scales")
+#install.packages("timeDate")
+#install.packages("xtable")
+
+library(knitr)
+library(dplyr)
+library(ggplot2)
+library(scales)
+library(timeDate)
+library(xtable)
+```
+
+### Downloading the data from the web
+``` {r}
+if(!file.exists("./data")){dir.create("./data")}
+fileUrl <- "https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2Factivity.zip"
+download.file(fileUrl, destfile = "./data/ActivityMonitoring_data.zip")
+unzip("./data/ActivityMonitoring_data.zip", exdir = "./data")
+```
+
+### Loading and preprocessing the data
+Show any code that is needed to
+
+1. Load the data (i.e. *read.csv()*)
+2. Process/transform the data (if necessary) into a format suitable for your analysis
+
+```{r}
+activity <- read.csv("./data/activity.csv", header = TRUE, sep = ",")
+activity$date <- as.Date(activity$date)
+
+FilteredActivity <- subset(activity, !is.na(activity$steps))
+```
+
+### What is mean total number of steps taken per day?
+For this part of the assignment, you can ignore the missing values in the dataset.
+
+1. Calculate the total number of steps taken per day
+2. If you do not understand the difference between histogram and a barplot, research the difference between them. Make a histograme of the total number of steps taken each day
+3. Calculate and report the mean and median of the total number of steps taken per day
+
+```{r}
+by_date <- group_by(FilteredActivity, date)
+StepsPerDay <- summarise(by_date, TotalSteps = sum(steps, na.rm = TRUE), 
+                         Mean = mean(steps, na.rm = TRUE),
+                         Median = median(steps, na.rm = TRUE))
+
+kable(StepsPerDay[,1:2], caption = "Total Number of Steps Taken Each Day")
+
+hist(StepsPerDay$TotalSteps, xlab = "Total Steps", 
+     main = "Total Number of Steps Taken Each Day", breaks = seq(0,25000, by = 2500))
+
+kable(Mean_Median_StepsPerDay <- StepsPerDay[,c(1,3:4)], 
+      caption = "Mean and Median of the Total Number of Steps Taken Each Day")
+```
+
+### What is the average daily pattern?
+
+1. Make a time series plot (i.e. *type = "l"*) of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)
+2. Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
+
+```{r}
+by_interval <- group_by(FilteredActivity, interval)
+DailyPattern <- summarise(by_interval, AverageStep = mean(steps, na.rm = TRUE))
+
+ggplot(data = DailyPattern, aes(x = interval, y = AverageStep)) + geom_line() +
+        labs(x = "Minute Interval", y = "Average Steps") + 
+        ggtitle("Average Daily Pattern") + theme(plot.title = element_text(hjust = 0.5))
+
+DailyPattern[which.max(DailyPattern$AverageStep),]$interval
+```
+
+### Imputing missing values
+Note that there are a number of days/intervals where there are missing values (coded as *NA*). The presence of missing days may introduce bias into some calculations or summaries of the data.
+
+1. Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with *NAs*)
+2. Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc.
+3. Create a new dataset that is equal to the original dataset but with the missing data filled in.
+4. Make a histogram of the total number of steps taken each day and Calculate and report the **mean** and **median** total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
+
+```{r}
+sum(is.na(activity))
+
+ActivityNew <- activity
+
+for (i in 1:nrow(ActivityNew)) {
+        if (is.na(ActivityNew[i,1])) {
+
+                        ActivityNew[i,1] = DailyPattern[which(DailyPattern$interval 
+                                                              == ActivityNew[i,3]),2]
+        }
+        else {
+                ActivityNew[i,1] = ActivityNew[i,1]
+        }
+}
+
+by_date_New <- group_by(ActivityNew, date)
+StepsPerDay_New <- summarise(by_date_New, TotalSteps = sum(steps, na.rm = TRUE),
+                             Mean = mean(steps, na.rm = TRUE),
+                             Median = median(steps, na.rm = TRUE))
+
+hist(StepsPerDay_New$TotalSteps, xlab = "Total Steps", 
+     main = "Total Number of Steps Taken Each Day", breaks = seq(0,25000, by = 2500))
+
+kable(Mean_Median_New <- StepsPerDay_New[,c(1,3:4)],
+      caption = "Mean and Median of the Total Number of Steps Taken Each Day")
+```
+
+### Are there differences in activity patterns between weekdays and weekends?
+For this part the weekdays() function may be of some help here. Use the dataset with the filled-in missing values for this part.
+
+1. Create a new factor variable in the dataset with two levels - "weekday" and "weekend" indicating whether a given date is a weekday or weekend day.
+2. Make a panel plot containing a time series plot (i.e. type="l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis). See the README file in the GitHub repository to see an example of what this plot should look like using simulated data.
+
+```{r}
+activity$day <- ifelse(isWeekday(activity$date) == TRUE, "Weekday", "Weekend")
+
+interval_by_day <- aggregate(steps~interval + day, activity, mean, na.rm = TRUE)
+
+ggplot(interval_by_day, aes(x = interval, y = steps, color = day)) + geom_line() + 
+        facet_wrap(~day, ncol = 1, nrow = 2) + 
+        labs(title = "Activity Pattern Between Weekday and Weekend", x = "Interval", y = "Average number of steps") +
+        theme(plot.title = element_text(hjust = 0.5))
+```
